--- a/doc/WeatherForecastAnalysis.ipynb
+++ b/doc/WeatherForecastAnalysis.ipynb
@@ -52,7 +52,7 @@
     }
    },
    "source": [
-    "Weather Forecast Analysis è il progetto universitario dello studente Giua Paolo (X81000576) della facoltà di informatica dell'Università di Catania."
+    "WeatherForecastAnalysis è un progetto universitario dello studente **Giua Paolo** (X81000576) della facoltà di informatica dell'Università degli studi di Catania."
    ]
   },
   {
@@ -1506,7 +1506,7 @@
     }
    },
    "source": [
-    "<h1>Premessa</h1>"
+    "<h1>Requisiti</h1>"
    ]
   },
   {
@@ -1517,7 +1517,7 @@
     }
    },
    "source": [
-    "Per la corretta esecuzione di Weather Forecast Analysis occore installare:"
+    "Per la corretta esecuzione di WeatherForecastAnalysis è necessario:"
    ]
   },
   {
@@ -1528,7 +1528,7 @@
     }
    },
    "source": [
-    "<li>Docker;</li>"
+    "* Docker;"
    ]
   },
   {
@@ -1539,7 +1539,7 @@
     }
    },
    "source": [
-    "<li>Netcat;</li>"
+    "* Netcat;"
    ]
   },
   {
@@ -1550,7 +1550,53 @@
     }
    },
    "source": [
-    "<li>Php.</li>"
+    "* Php;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Scaricare [kafka_2.12-2.4.1.tgz](https://drive.google.com/file/d/1xXGH_Ee8MhI0GUlSUVHK_k2sEPxpaEDj/view?usp=sharing) nella cartella **kafka/src/setup** del progetto;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Scaricare [spark-2.4.5-bin-hadoop2.7.tgz](https://drive.google.com/file/d/1QPWhdRXWD3SJ6pSYOk1ZUfIL0k9_SM_X/view?usp=sharing) nella cartella **spark/src/setup** del progetto;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Eseguire il file script **'build'** posizionato nella cartella principale del progetto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```\n",
+    "$ ./build\n",
+    "```"
    ]
   },
   {
@@ -1572,29 +1618,7 @@
     }
    },
    "source": [
-    "<li>Gnome Terminal.</li>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Infine occore eseguire il file script 'build' posizionato nella cartella principale del progetto."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "$ ./build"
+    "* Gnome Terminal."
    ]
   },
   {
@@ -1605,7 +1629,7 @@
     }
    },
    "source": [
-    "<h1>Prima esecuzione</h1>"
+    "<h1>Esecuzione</h1>"
    ]
   },
   {
@@ -1616,7 +1640,7 @@
     }
    },
    "source": [
-    "Soddisfatta la premessa, si potrà decidere se eseguire il progetto in background o meno."
+    "**Soddisfa i requisiti prima di eseguire WeatherForecastAnalysis**"
    ]
   },
   {
@@ -1627,7 +1651,7 @@
     }
    },
    "source": [
-    "<h1>Background</h1>"
+    "L'esecuzione può avvenire in due modalità:"
    ]
   },
   {
@@ -1638,7 +1662,7 @@
     }
    },
    "source": [
-    "Per questa modalità di esecuzione, basterà eseguire il file script 'start', posizionato nella cartella principale del progetto."
+    "### Background"
    ]
   },
   {
@@ -1649,7 +1673,7 @@
     }
    },
    "source": [
-    "$ ./start"
+    "Usa lo script **'start'**, posizionato nella cartella principale del progetto, per l'esecuzione in background."
    ]
   },
   {
@@ -1660,7 +1684,9 @@
     }
    },
    "source": [
-    "<h1>In Terminale (occorre Gnome Terminal)</h1>"
+    "```\n",
+    "$ ./start\n",
+    "```"
    ]
   },
   {
@@ -1671,7 +1697,7 @@
     }
    },
    "source": [
-    "Per questa modalità di esecuzione, basterà eseguire il file script 'start_gnome', posizionato nella cartella principale del progetto."
+    "Nel terminale sarà visibile solo il log del server integrato di Php."
    ]
   },
   {
@@ -1682,7 +1708,42 @@
     }
    },
    "source": [
-    "$ ./start_gnome"
+    "### In Terminale (Gnome Terminal necessario)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Questa modalità crea più schede di Gnome Terminal per visualizzare cosa accade in ciascun container."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Usa lo script **'start_gnome'**, posizionato nella cartella principale del progetto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```\n",
+    "$ ./start_gnome\n",
+    "```"
    ]
   },
   {
@@ -1704,7 +1765,7 @@
     }
    },
    "source": [
-    "Per fermare l'esecuzione di Weather Forecast Analysis, richiamare il comando sottostante nella cartella principale del progetto e CTRL + C sul terminale del web server PHP."
+    "Per fermare WeatherForecastAnalysis, usa lo script **'stop'** e richiama **CTRL + C** sul terminale del web server PHP."
    ]
   },
   {
@@ -1715,7 +1776,9 @@
     }
    },
    "source": [
-    "$ ./stop"
+    "```\n",
+    "$ ./stop\n",
+    "```"
    ]
   },
   {
